Fix: long dates wrap around in headlines view because their max  width is limited, tied to feed-name max width.

--- a/defaults/data/feedview.css
+++ b/defaults/data/feedview.css
@@ -273,7 +273,7 @@ pre, code {
 
 /* Crop feed names longer than 170px */
 .article-container[collapsed] .feed-name {
-    max-width: 170px;
+    width: 170px;
     height: 1.3em; /* Height of a single line */
     overflow: hidden;
 }
